--- a/WebApp/ExercisePages/Exercise02_A.cshtml
+++ b/WebApp/ExercisePages/Exercise02_A.cshtml
@@ -30,7 +30,7 @@
     {
         if (searchByNameResults.Count() == 0)
         {
-            <p style="color:firebrick;">No Artist Found</p>
+            <p class="offset-1" style="color:firebrick;">No Artist Found</p>
             artistName = "";
         }
         else
