--- a/WebApp/ExercisePages/Exercise02_C.cshtml
+++ b/WebApp/ExercisePages/Exercise02_C.cshtml
@@ -23,7 +23,7 @@
 }
 
 <div class="offset-1">
-    <h3 class="col-11">Artist: @artist</h3>
+    <h3 class="col-11">Albums of @artist</h3>
     <div class="col-11">
         @gridinstance.GetHtml(
             tableStyle: "table table-striped table-bordered table-hover",
