minor response change

--- a/WebApp/ExercisePages/Exercise02_B.cshtml
+++ b/WebApp/ExercisePages/Exercise02_B.cshtml
@@ -36,7 +36,8 @@
     {
         if (searchAlbumsByArtistIdResult.Count() == 0)
         {
-            <p class="offset-1" style="color:firebrick">@artistName doesn't have any Albums</p>
+            //var chosenArtist = ;
+            <p class="offset-1" style="color:firebrick">No Albums Found.</p>
         }
         else
         {
