--- a/WebApp/_Menu.cshtml
+++ b/WebApp/_Menu.cshtml
@@ -18,7 +18,7 @@
                 <div class="dropdown-menu" aria-labelledby="navbarSubMenu">
                     <a class="dropdown-item" href="~/ExercisePages/Exercise01.cshtml">Exercise 01</a>
                     <a class="dropdown-item" href="~/ExercisePages/Exercise02_A.cshtml">Exercise 02</a>
-                    
+                    <a class="dropdown-item" href="~/ExercisePages/Exercise93.cshtml">Exercise 03</a>                    
                 </div>
             </li>
 
