--- a/WebApp/ExercisePages/Exercise03.cshtml
+++ b/WebApp/ExercisePages/Exercise03.cshtml
@@ -38,15 +38,15 @@
     //Validation
     Validation.Add("ArtistID",
         Validator.Required("The artist is required"));
-    Validation.Add("AlbumName",
-        Validator.Required("The title is required"),
-        Validator.StringLength(160, 1, "The title can be at most 160 characters"));
-    Validation.Add("ReleaseYear",
-        Validator.Integer("The year must be a number"),
-        Validator.Required("The year is required"),
-        Validator.Range(1950, DateTime.Today.Year, "The year is required"));
-    Validation.Add("RecordLabel",
-        Validator.StringLength(50, 0, "The label can be at most 50 characters"));
+    //Validation.Add("AlbumName",
+    //    Validator.Required("The title is required"),
+    //    Validator.StringLength(160, 1, "The title can be at most 160 characters"));
+    //Validation.Add("ReleaseYear",
+    //    Validator.Integer("The year must be a number"),
+    //    Validator.Required("The year is required"),
+    //    Validator.Range(1950, DateTime.Today.Year, "The year is required"));
+    //Validation.Add("RecordLabel",
+    //    Validator.StringLength(50, 0, "The label can be at most 50 characters"));
 }
 
 @section banner {
@@ -69,8 +69,7 @@
             //trycatch db query
             try
             {
-                var createAlbum = "INSERT INTO Albums (Title, ArtistId, ReleaseYear, ReleaseLabel" +
-                                  " VALUES(@0, @1, @2, @3)";
+                var createAlbum = "INSERT INTO Albums (Title, ArtistId, ReleaseYear, ReleaseLabel) VALUES(@0, @1, @2, @3)";
                 db.Execute(createAlbum, albumName,
                     artistId.Equals("0") ? null : artistId,
                     releaseYear,
