--- a/WebApp/ExercisePages/Exercise03.cshtml
+++ b/WebApp/ExercisePages/Exercise03.cshtml
@@ -38,9 +38,9 @@
     //Validation
     Validation.Add("ArtistID",
         Validator.Required("The artist is required"));
-    //Validation.Add("AlbumName",
-    //    Validator.Required("The title is required"),
-    //    Validator.StringLength(160, 1, "The title can be at most 160 characters"));
+    Validation.Add("AlbumName",
+        Validator.Required("The title is required"),
+        Validator.StringLength(160, 1, "The title can be at most 160 characters"));
     //Validation.Add("ReleaseYear",
     //    Validator.Integer("The year must be a number"),
     //    Validator.Required("The year is required"),
@@ -116,7 +116,7 @@
         <div class="row offset-1">
             <label class="label" for="ReleaseYear">Year: </label>
             <span>@Html.TextBox("ReleaseYear", releaseYear)</span>
-            @Html.ValidationMessage("AlbumName")
+            @Html.ValidationMessage("ReleaseYear")
         </div>
         <div class="row offset-1">
             <label class="label" for="RecordLabel">Label: </label>
