--- a/WebApp/ExercisePages/Exercise03.cshtml
+++ b/WebApp/ExercisePages/Exercise03.cshtml
@@ -17,7 +17,7 @@
     //Validation
     Validation.Add("Title",
         Validator.Required("Title is required"),
-        Validator.StringLength(160, 1, "Title is limited to 160 characters"));
+        Validator.StringLength(160, 0, "Title is limited to 160 characters"));
     Validation.Add("ArtistId",
         Validator.Range(1, double.MaxValue, "Artist ID is Required"));
     Validation.Add("ReleaseYear",
@@ -101,7 +101,7 @@
                     <option value="0">select...</option>
                     @foreach (var acollectionrow in artistList)
                     {
-                        if (acollectionrow.ArtistList.ToString() == artistId)
+                        if (acollectionrow.ArtistId.ToString() == artistId)
                         {
                             <option value="@acollectionrow[0]" selected>@acollectionrow[1]</option>
                         }
