--- a/WebApp/ExercisePages/Exercise04_B.cshtml
+++ b/WebApp/ExercisePages/Exercise04_B.cshtml
@@ -34,6 +34,6 @@
             grid.Column(columnName: "Name", header: "Artist"),
             grid.Column(columnName: "ReleaseYear", header: "Year"),
             grid.Column(columnName: "ReleaseLabel", header: "Label"),
-            grid.Column(header: "", format: @<text><a href="~/ExercisePages/Exercise04_C.cshtml?albumid=@item.AlbumId">Edit</a></text>)))
+            grid.Column(header: "", format: @<text><a href="~/ExercisePages/Exercise04_C.cshtml?aid=@item.AlbumId">Edit</a></text>)))
     </div>
 </div>
